0.019 2024-11-27
  [New Features]
    * Add Add Net::SSLeay#get0_next_proto_negotiated_return_string method.
    * Add Net::SSLeay#get0_alpn_selected_return_string method.
    * Add Net::SSLeay::Constant#TLSEXT_NAMETYPE_host_name method.
    * Add Net::SSLeay::Constant#EVP_MAX_MD_SIZE method.
    * Add Net::SSLeay::X509_NAME_ENTRY class.
  [Deprecations and Rename]
    * Net::SSLeay#P_dump_peer_certificate is deprecated, and dump_peer_certificate method is added.
    * Net::SSLeay::X509#P_get_ocsp_uri is deprecated, and get_ocsp_uri method is added.
0.018 2024-11-25
  [New Features]
    * Add Net::SSLeay::Util class.
    * Add Net::SSLeay::SSL_CTX#set_alpn_protos_with_protocols method.
  [Incompatible Changes]
    * Changed the argument of Net::SSLeay::SSL_CTX#set_alpn_protos method.
      [Before]
      method set_alpn_protos : int ($protos : string, $protos_len : int = -1)
      [After]
      method set_alpn_protos : int ($protos : byte[], $protos_len : int = -1)
  [Bug Fix]
    * Fix a bug of Net::SSLeay::SSL_CTX#set_next_protos_advertised_cb_with_protocols.
  [Test Improvement]
    * Add some tests.
0.017 2024-11-22
  [New Features]
    * Add Net::SSLeay::Constant#OPENSSL_VERSION_TEXT method.
    * Add Net::SSLeay::ASN1_ENUMERATED#DESTROY method.
    * Add Net::SSLeay::ASN1_INTEGER#DESTROY method.
    * Add Net::SSLeay::ASN1_OBJECT#DESTROY method.
    * Add Net::SSLeay::ASN1_TIME#DESTROY method.
    * Add Net::SSLeay::EVP_MD#DESTROY method.
    * Add Net::SSLeay::OPENSSL_INIT class.
    * Add the following methods to Net::SSLeay::OPENSSL_INIT class.
      static method new : Net::SSLeay::OPENSSL_INIT_SETTINGS ();
      
      static method set_config_filename : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $filename : string);
      
      static method set_config_file_flags : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $flags : long);
      
      static method set_config_appname : int ($init : Net::SSLeay::OPENSSL_INIT_SETTINGS, $name : string);