@@ -7,6 +7,7 @@ class Net::SSLeay::X509 : pointer {
   use Net::SSLeay::Error;
   use Net::SSLeay::X509_NAME;
   use Net::SSLeay::EVP_MD;
+  use Net::SSLeay::Constant as SSL;
   
   use Fn;
   
@@ -27,7 +28,31 @@ class Net::SSLeay::X509 : pointer {
   
   native method digest : int ($type : Net::SSLeay::EVP_MD, $md : mutable string, $len_ref : int*);
   
+  method digest_return_string : string ($type : Net::SSLeay::EVP_MD) {
+    
+    my $md = (mutable string)new_string_len SSL->EVP_MAX_MD_SIZE;
+    my $len = 0;
+    
+    $self->digest($type, $md, \$len);
+    
+    Fn->shorten($md, $len);
+    
+    return $md;
+  }
+  
   native method pubkey_digest : int ($type : Net::SSLeay::EVP_MD, $md : mutable string, $len_ref : int*);
+  
+  method pubkey_digest_return_string : string ($type : Net::SSLeay::EVP_MD) {
+    
+    my $md = (mutable string)new_string_len SSL->EVP_MAX_MD_SIZE;
+    my $len = 0;
+    
+    $self->pubkey_digest($type, $md, \$len);
+    
+    Fn->shorten($md, $len);
+    
+    return $md;
+  }
   
   native method dup : Net::SSLeay::X509 ();
   
