@@ -5,6 +5,9 @@
     * Add Net::SSLeay::Constant#TLSEXT_NAMETYPE_host_name method.
     * Add Net::SSLeay::Constant#EVP_MAX_MD_SIZE method.
     * Add Net::SSLeay::X509_NAME_ENTRY class.
+    * Add Net::SSLeay::X509#pubkey_digest_return_string method.
+    * Add Net::SSLeay::X509#digest_return_string method.
+    
   [Deprecations and Rename]
     * Net::SSLeay#P_dump_peer_certificate is deprecated, and dump_peer_certificate method is added.
     * Net::SSLeay::X509#P_get_ocsp_uri is deprecated, and get_ocsp_uri method is added.
